src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AIT_Primary_Account_Owner__c</fullName>
        <description>Used to Store the Primary Sales Rep from Siebel</description>
        <label>AIT Primary Account Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIT_Primary_Territory__c</fullName>
        <description>Used to Store the Primary Territory from Siebel</description>
        <label>AIT Primary Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APAC_Organization__c</fullName>
        <label>APAC Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Zebra APAC USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra APAC RMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Conversion_Source__c</fullName>
        <description>This field value consists of the source from where the Account was Migrated</description>
        <label>Account Conversion Source</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESSERACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Hierarchy_Placement__c</fullName>
        <label>Account Hierarchy Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Global Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Site Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Key__c</fullName>
        <description>From Phase 4 Account key of E to E survivor from Trilogy DF</description>
        <label>Account_Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Formula__c</fullName>
        <formula>AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>6{000000}</displayFormat>
        <label>SF Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Owner.FirstName+&apos; &apos;+Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Classified Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Legal Entities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Parties</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account Unique Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Validation_Status__c</fullName>
        <description>This Picklist shows the account validation status</description>
        <label>Account Validation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use as Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Validated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_cleansed_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account cleansed flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_id_18_Digit__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account id 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Program_Membership__c</fullName>
        <description>This field determines if an account (/partner) is an active member of a channel program</description>
        <label>Active Program Membership</label>
        <summaryFilterItems>
            <field>Partner_Program_Membership__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>In Grace Period, Current Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Program_Membership__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Company_Websites__c</fullName>
        <label>Additional Company Websites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Dr_State_Not_in_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State not present in State Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Process_status__c</fullName>
        <label>Address Validation status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Status_Description__c</fullName>
        <label>Address Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Description__c</fullName>
        <formula>Address_Process_status__c +&apos;-&apos; + Address_Status_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Validation Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Partners__c</fullName>
        <description>Provide the name(s) of the respective alliance partners</description>
        <inlineHelpText>Provide the name(s) of the respective alliance partners</inlineHelpText>
        <label>Alliance Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <description>This field lists current or potential applications being worked on.</description>
        <inlineHelpText>This field lists current or potential applications being worked on.</inlineHelpText>
        <label>Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Access Control/Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Selivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Citation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service/Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership/Gift Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing/Citations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile HMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset and Facility Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Associated Account)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autorefresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorefresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the account is on a business improvement plan</description>
        <inlineHelpText>Check this box if the account is on a business improvement plan</inlineHelpText>
        <label>BIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BO_Error__c</fullName>
        <label>BO Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BO_Synch_Status_Formula__c</fullName>
        <formula>BO_Synch_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BO Synch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_Synch_Status__c</fullName>
        <label>BO Synch Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Transition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used as a flag to determine which (Partner) Accounts will be eligible to the Batch Transition process</description>
        <label>Batch Transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_to_Account_Link__c</fullName>
        <inlineHelpText>This field determines the link between Service Account and Trilogy Account</inlineHelpText>
        <label>Bill-to Account Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Bill-to Account Link)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Assignment_Value__c</fullName>
        <formula>( MOD(Number_of_Open_Cases__c, Number_Active_Partner_Admins__c)  + 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Assignment Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Restricted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field only visible to System Adminsistrators that will allow validation rules to restrict filed access.</description>
        <inlineHelpText>When checked, this field indicates Master Accounts within Siebel for which designated Account Detail Fields cannot be edited.</inlineHelpText>
        <label>Change_Restricted__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Current classification stage of the reseller</description>
        <inlineHelpText>Current classification stage of the reseller</inlineHelpText>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Active Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycle Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified (Prospect)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This section is used for team members or account owners to list any comments associated with this account.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id_Type__c</fullName>
        <label>Company Id Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tax Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor_Program_Type__c</fullName>
        <description>List the name of the competitior program track</description>
        <inlineHelpText>List the name of the competitior program track</inlineHelpText>
        <label>Competitor Program Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Boca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datamax-Oneil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datasouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dymo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fargo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Godex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printronix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repacore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_Formula__c</fullName>
        <formula>Credit_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code_Formula__c</fullName>
        <formula>Currency_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers_Include__c</fullName>
        <description>For resellers, list all of their respective end-users that are customers. A sample list is often displayed on websites as well.</description>
        <label>Customer List</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DBA_AKA__c</fullName>
        <description>Doing Business As or Also Know As. Example is Atlantic Telephone &amp; Telegraph (AKA: ATT)</description>
        <inlineHelpText>Doing Business As or Also Know As. Example is Atlantic Telephone &amp; Telegraph (AKA: ATT)</inlineHelpText>
        <label>DBA/AKA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Trading_Name__c</fullName>
        <description>To store the DBA name for the partner accounts and let the partner admins manage this information</description>
        <label>Company DBA/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: used internally for the data conversion process</description>
        <inlineHelpText>Cloud MDM: used internally for the data conversion process</inlineHelpText>
        <label>Converted from Cloud MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Hierarchy_Level__c</fullName>
        <description>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</description>
        <inlineHelpText>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</inlineHelpText>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: synchronize Account data with Bean</description>
        <inlineHelpText>Cloud MDM: synchronize Account data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent_Name__c</fullName>
        <description>Cloud MDM: Name of the Ultimate Parent Account</description>
        <inlineHelpText>Cloud MDM: Name of the Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent__c</fullName>
        <description>Cloud MDM: Ultimate Parent Account</description>
        <inlineHelpText>Cloud MDM: Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subsidiaries</relationshipLabel>
        <relationshipName>Subsidiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Installed_Products__c</fullName>
        <label>Installed Products</label>
        <picklist>
            <picklistValues>
                <fullName>Dish Washer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__X_Internal__c</fullName>
        <description>Used by Cloud MDM internally</description>
        <inlineHelpText>Used by Cloud MDM internally</inlineHelpText>
        <label>X_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Annual_Sales_Volume_Indicator__c</fullName>
        <description>This is a formula field to calculate Annual Sales Volume Indicator</description>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Annual Sales Volume Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Delinquency_Risk__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Delinquency Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Legal_Structure__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Legal Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Number_of_Business_Family_Members__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Number of Business Family Members</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Subsidiary_Indicator__c</fullName>
        <description>This is a formula field to check the subsidiary indicator</description>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Subsidiary Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify the Distributor Accounts.</description>
        <label>Distributor ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_s__c</fullName>
        <label>Distributor(s)</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>BlueStar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingram Micro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScanSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wynit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EVM_Account_ID__c</fullName>
        <description>This field is used as a Place holder for MSI SFDC Account ID within Zebra. MDM plays a role here</description>
        <externalId>true</externalId>
        <label>EVM Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_Distributor__c</fullName>
        <label>EVM Distributor</label>
        <summaryFilterItems>
            <field>PE_Program_Detail__c.Community__c</field>
            <operation>equals</operation>
            <value>Value Added Distributor</value>
        </summaryFilterItems>
        <summaryForeignKey>PE_Program_Detail__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field_Sales__c</fullName>
        <description>Field Sales %</description>
        <label>Field Sales %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Customer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Customer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Customer_Formula__c</fullName>
        <formula>Financial_Customer_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <label>Financial Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial__c</fullName>
        <formula>IF(((Financial_Customer_Flag__c = true &amp;&amp; Orderable_Flag__c = true)  || (!ISPICKVAL(Price_Group__c, &apos;&apos;) &amp;&amp; MSI_E_Account__c != &apos;&apos;))
, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial</label>
        <type>Text</type>
    </fields>
</CustomObject>